Step 7 - Updated CSS so that inventory is a box on the left-hand side with the token clearly visible. Bug: distance function not working

--- a/src/style.css
+++ b/src/style.css
@@ -2,11 +2,29 @@
   padding: 1rem;
 }
 
+#inventory {
+  padding: 1rem;
+  border: 2px solid black;
+  width: 30%;
+}
+
 #statusPanel {
   padding: 1rem;
+  border: 2px solid black;
+  text-align: center;
+  align-content: center;
+  font-size: 100px;
+  width: 30%;
+  height: 40%;
 }
 
 #map {
-  width: 100%;
+  width: 70%;
   height: 80vh;
+  border: 2px solid black;
+}
+
+#wrapDiv {
+  display: flex;
+  gap: 5px;
 }
